@@ -169,6 +169,8 @@ at the Exascale EU Centre of Excellence.
 Contributors to \qe, beyond the authors of the papers
 mentioned in Sec.\ref{SubSec:Terms}, include:
 \begin{itemize}
+  \item Federico Ficarelli and Daniele Cesarini (CINECA), with help 
+  from Ye Luo (Argonne) and Sebastian Gs\"anger, for cMake support;
   \item Ye Luo (Argonne) for improved FFT threading and miscellaneous
   contributions and optimizations;
 %  \item Pietro Bonf\`a (CINECA) for multiple contributions to optimization,
