@@ -1,4 +1,6 @@
 New in dev version:
+  * Support for cMake (F. Ficarelli and D. Cesarini, CINECA, with help from
+    Ye Luo, P. Delugas, S. Gsaenger)
 
 Fixed in dev version:
   * Some linkers yield "missing references to ddot_" in libbeef
